(PC-21446)[PRO] fix: button icon size, margin and button alignment with nav brand logo

--- a/pro/src/components/SkipLinks/SkipLinks.module.scss
+++ b/pro/src/components/SkipLinks/SkipLinks.module.scss
@@ -1,6 +1,7 @@
 @use "styles/mixins/_rem.scss" as rem;
 @use "styles/variables/_colors.scss" as colors;
 @use "styles/variables/_size.scss" as size;
+@use "styles/mixins/_fonts.scss" as fonts;
 
 .skip-links {
   height: 0;
@@ -24,7 +25,7 @@
     height: rem.torem(32px);
     justify-content: flex-end;
     margin-right: calc(
-      size.$nav-brand-margin-right + size.$header-nav-item-padding
+      size.$nav-brand-margin-right + size.$header-nav-item-padding + rem.torem(8px)
     );
 
     &-button {
@@ -34,9 +35,13 @@
       border-radius: rem.torem(4px);
       margin-top: rem.torem(6px);
       margin-bottom: rem.torem(6px);
+      @include fonts.caption;
 
       & svg {
         fill: colors.$white;
+        height: rem.torem(16px);
+        width: rem.torem(16px);
+        margin-right: rem.torem(4px) !important;
       }
     }
   }
